# messin_with_meson

./: meson.build
camera/: meson.build
camera/src/: camera_config_defs.cpp
driver/: meson.build
